added options menu to WebLauncherActivity

--- a/Android/res/menu/main_menu.xml
+++ b/Android/res/menu/main_menu.xml
@@ -2,4 +2,7 @@
     <item
         android:id="@+id/reload"
         android:title="@string/reload_title"/>
+    <item
+        android:id="@string/prefs"
+        android:title="@string/prefs"/>
 </menu>
