--- a/Android/res/layout/activity_weblauncher.xml
+++ b/Android/res/layout/activity_weblauncher.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context=".MainActivity" >
+    tools:context=".MouseActivity" >
 
     <!--
          The primary full-screen view. This can be replaced with whatever view
@@ -11,12 +11,10 @@
          TextureView, etc.
     -->
 
-<WebView
-                            android:id="@+id/webview"
-                            android:layout_width="fill_parent"
-                            android:layout_height="fill_parent"
-                        />
-
-
-
+	<WebView
+         android:id="@+id/webview"
+         android:layout_width="fill_parent"
+         android:layout_height="fill_parent"
+     />
+	
 </FrameLayout>
