--- a/WebLauncher/res/layout/main.xml
+++ b/WebLauncher/res/layout/main.xml
@@ -8,7 +8,7 @@
     android:focusableInTouchMode="true" >
 
     <ImageButton
-        android:id="@+id/backButton"
+        android:id="@+id/keyboardButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
@@ -16,8 +16,7 @@
         android:background="@null"
         android:contentDescription="@string/menu_description"
         android:scaleType="fitXY"
-        android:scaleX="-1"
-        android:src="@android:drawable/ic_menu_directions" />
+        android:src="@android:drawable/ic_menu_sort_alphabetically" />
 
     <Button
         android:id="@+id/leftClick"
@@ -25,7 +24,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/backButton"
+        android:layout_toLeftOf="@+id/keyboardButton"
         android:focusable="false"
         android:text="@string/blank" />
 
@@ -35,7 +34,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_toRightOf="@+id/backButton"
+        android:layout_toRightOf="@+id/keyboardButton"
         android:focusable="false"
         android:text="@string/blank" />
 
