--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="android:style/Theme.Black.NoTitleBar" />
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar"/>
     
     <style name="FullscreenTheme" parent="android:Theme.NoTitleBar">
         <item name="android:windowContentOverlay">@null</item>
