--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -29,18 +29,38 @@
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginStart="18dp"
                     android:layout_marginLeft="18dp"
-                    android:layout_toRightOf="@+id/imageView"
-                    android:text="@string/about_1" />
+                    android:layout_marginRight="18dp"
+                    android:layout_marginBottom="0dp"
+                    android:text="@string/about_1"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/textView2"
+            <Space
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/about_2" />
+                android:layout_height="45dp" />
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/about_2" />
+                </LinearLayout>
+            </HorizontalScrollView>
 
             <ToggleButton
                 android:id="@+id/showLicense"
