--- a/app/src/main/res/menu/main_activity_actions.xml
+++ b/app/src/main/res/menu/main_activity_actions.xml
@@ -14,4 +14,8 @@
     <item android:id="@+id/action_settings"
           android:title="@string/prefs"
           android:showAsAction="never" />
+    <item
+        android:id="@+id/menu_about"
+        android:title="@string/menu_about"
+        android:showAsAction="never"/>
 </menu>
