send WOL packet to broadcast address if "broadcast" is selected; code cleanup

--- a/app/src/main/res/layout/activity_add_or_edit_server.xml
+++ b/app/src/main/res/layout/activity_add_or_edit_server.xml
@@ -59,6 +59,7 @@
         android:id="@+id/broadcastCheckBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:checked="true"
         android:text="@string/broadcast_checkbox" />
 
     <Button
