--- a/app/src/main/res/layout/server_single.xml
+++ b/app/src/main/res/layout/server_single.xml
@@ -12,7 +12,7 @@
                     android:id="@+id/server_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/black"
+                    android:textColor="@android:color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </TableRow>
