fixed auto-discover behavior to work properly and only attempt auto-discover once rather than infinitely; fixed bug that prevented mouse from connecting automatically if host not already on when launching the app

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -45,6 +45,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="59dp"
         android:gravity="center_horizontal"
+        android:textColor="@android:color/white"
         android:text="@string/TouchBackground"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
